# HomeWork_27

./: data_transformation.py  db.sqlite3  manage.py  pyproject.toml
HomeWork_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  views.py
avito_app/: asgi.py  settings.py  wsgi.py
fixtures/: ads.json
